Feat: refactored delete logic